--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                   }
               );
           },
-          'https://universalcontainers.force.com/ourstores/'  // Site endpoint
+          'https://tnf-lwc-developer-edition.ap26.force.com/'  // Site endpoint
       );
     </script>
   </head>
