--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="https://tnf-lwc-demo-developer-edition.ap26.force.com/lightning/lightning.out.js"></script>
+    <script src="https://tnf-lwc-test-developer-edition.ap26.force.com/lwchelloworld/lightning/lightning.out.js"></script>
     <script>
       $Lightning.use("c:lwc",    // name of the Lightning app
           function() {                  // Callback once framework and app loaded
